# zaqar

./: .coveragerc  .gitignore  .gitreview  .pre-commit-config.yaml  .stestr.conf  .testr.conf  .zuul.yaml  AUTHORS  AUTHORS.rst  CONTRIBUTING.rst  HACKING.rst  MANIFEST.in  README.rst  bench-requirements.txt  bindep.txt  doc-test.conf  dox.yml  lower-constraints.txt  openstack-common.conf  requirements-py3.txt  requirements.txt  setup.cfg  setup.py  system-test-requirements.txt  test-requirements-py3.txt  test-requirements.txt  tox.ini
api-ref/source/: claims.inc  conf.py  flavors.inc  health.inc  index.rst  messages.inc  parameters.yaml  pools.inc  queues.inc  status.yaml  subscription.inc  versions.inc
devstack/: README.rst  plugin.sh  settings
devstack/gate/: gate_hook.sh  post_test_hook.sh
devstack/upgrade/: resource.sh  settings  shutdown.sh  upgrade.sh
doc/: README.md  pom.xml  requirements.txt
doc/marconi-api-ref/: os-marconi-apiRef.xml  pom.xml
doc/marconi-get-started/: os-marconi-apiGettingStarted.xml  pom.xml
doc/source/: CORS.rst  OSprofiler.rst  api.rst  conf.py  development-environment.rst  first_patch.rst  first_review.rst  gerrit.rst  getting_started.rst  glossary.rst  ha.rst  headers_queue_api_working.rst  index.rst  installing.rst  jenkins.rst  launchpad.rst  running_benchmark.rst  running_tests.rst  storage.rst  subscription_confirm.rst  test_suite.rst  transport.rst  welcome.rst  writing_pipeline_stages.rst
doc/user-guide/: includewars.xml  pom.xml
doc/wadl/: os-marconi-apiRef.wadl
doc/zaqar-get-started/: os-zaqar-apiGettingStarted.xml  pom.xml
etc/: README-policy.json.sample  README-policy.yaml.sample  logging.conf-sample  logging.conf.sample  marconi-proxy.conf-sample  marconi-queues.conf-sample  marconi.conf-sample  marconi.conf.sample  paste.ini-sample  policy.json.sample  uwsgi.conf  zaqar-benchmark.conf.sample  zaqar-policy-generator.conf  zaqar.conf.sample
etc/oslo-config-generator/: zaqar.conf
examples/: websocket.html
install-guide/source/: conf.py  index.rst  install-rdo.rst  install-ubuntu.rst  install.rst
lib/: marconi_paste.py
marconi/: __init__.py  bootstrap.py  i18n.py  kernel.py  main.py  version.py
marconi/bench/: README.rst  cli_config.py  conductor.py  consumer.py  messages.json  producer.py
marconi/cmd/: gc.py  server.py
marconi/common/: __init__.py  access.py  api.py  cli.py  config.py  decorators.py  errors.py  exceptions.py  kernel.py  pipeline.py  request.py  response.py  utils.py
marconi/locale/: marconi-log-critical.pot  marconi-log-error.pot  marconi-log-info.pot  marconi.pot
marconi/proxy/: app.py  base.py  bootstrap.py
marconi/queues/: bootstrap.py
marconi/storage/: __init__.py  base.py  driver_base.py  exceptions.py
marconi/tests/: __init__.py  base.py  faulty_storage.py  helpers.py  test_bootstrap.py  test_config.py  test_simple.py  test_sqlite.py
marconi/transport/: __init__.py  auth.py  base.py  driver_base.py  helpers.py  validation.py
rally-jobs/: README.rst  zaqar-zaqar.yaml
rally-jobs/extra/: README.rst
rally-jobs/plugins/: README.rst
rally-scenarios/: README.rst  zaqar-zaqar.yaml
releasenotes/notes/: Integrate-OSprofiler-with-zaqar-59d0dc3d0326947d.yaml  add-a-notifier-using-trust-271d9cd1d2b4cdeb.yaml  add-swift-backend-4eb9b43913f39d18.yaml  allow-configuration-of-websocket-notification-fa542fbf761378d3.yaml  configuration-refactor-0ff219ac59c96347.yaml  delete_messages_with_claim_ids-64bb8105de3768b1.yaml  deprecate-v11-976cccc1b56a28e7.yaml  drop-py-2-7-09cf95d7d843d8f6.yaml  email-notification-by-internal-tool-08910ab2247c3864.yaml  encrypted-messages-in-queue-d7438d4f185be444.yaml  falcon-4-e4b5aab856e3228c.yaml  fix-detailed-queue-without-reserved-metadata-b53857ed9821fe76.yaml  fix-swift-insecure-149799b47c3da6cf.yaml  fix_auth_issue_for_root_path-b15e1c4e92e4e8b1.yaml  fix_subscription_limit-c3cdc9385825285a.yaml  introduce-guru-to-zaqar-ac7b51c764503829.yaml  introduce-topic-resource-9b40674cac06bdc2.yaml  lazy-queues-in-subscriptions-6bade4a1b8eca3e5.yaml  purge-queue-6788a249ee59d55a.yaml  queue-filter-support-b704a1c27f7473b9.yaml  redis-password-3ede292f7f843cb8.yaml  redis-sentinel-authentication-93fa9b1846979e41.yaml  redis-username-98a265f61fca6a1c.yaml  remove-deprecated-storage-group-2b845804560eeb07.yaml  remove-format-contraint-of-client-id-ab787960df6e1606.yaml  remove-limit-transport-group-8255ee26875519f5.yaml  remove-pool-group-00f2e69682c48131.yaml  remove-pool-group-totally-062ecfccd90a6725.yaml  remove-v1-1-a6f3a7fefd70cc5a.yaml  remove_pool_group_from_zaqar-f8eafeed21779959.yaml  request-id-cbc8150626c0ccc3.yaml  return_reserved_metdata_for_dead_letter_queue-da160301f6d8cfa4.yaml  show_default_attributes_for_queue-3d87333752484c87.yaml  sql_init-c9b3883241631f24.yaml  sqlalchemy-migration-6b4eaebb6e02a449.yaml  subscription-confirmation-support-email-0c2a56cfedc5d1e2.yaml  support-cors-af8349382a44aa0d.yaml  support-dot-in-queue-name-bd2b3d523f55451f.yaml  support-extra-specs-to-subscription-confirming-edbdbebbdcd0cd74.yaml  support-more-backoff-functions-41e02a5977341576.yaml  (+15 more)
releasenotes/source/: conf.py  index.rst  liberty.rst  mitaka.rst  newton.rst  ocata.rst  pike.rst  queens.rst  rocky.rst  stein.rst  train.rst  ussuri.rst
samples/html/: confirmation_web_service_sample.py  subscriptionConfirmation.html  unsubscriptionConfirmation.html
samples/zaqar/: sendmail.py  subscriber_service_sample.py
tests/: __init__.py  test_bootstrap.py  test_config.py
tests/etc/: drivers_storage_invalid.conf  drivers_transport_invalid.conf  functional-marconi.conf  functional-tests.conf  functional-zaqar.conf  keystone_auth.conf  websocket_mongodb.conf  wsgi_faulty.conf  wsgi_fifo_mongodb.conf  wsgi_mongodb.conf  wsgi_mongodb_default_limits.conf  wsgi_mongodb_pooled.conf  wsgi_mongodb_sharded.conf  wsgi_mongodb_validation.conf  (+13 more)
tools/: hacking.py  install_venv.py  install_venv_common.py  pip-requires  run_pep8.sh  system-test-requires  test-requires  test-setup.sh
zaqar/: __init__.py  bootstrap.py  context.py  i18n.py  version.py
(+1241 files in other folders)
