[metadata]
name = zaqar

# Juno
version = 2014.2

summary = OpenStack Queuing and Notification Service
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[files]
packages =
    zaqar

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[entry_points]
console_scripts =
    zaqar-bench-pc = zaqar.bench.conductor:main
    zaqar-server = zaqar.cmd.server:run
    marconi-server = zaqar.cmd.server:run

zaqar.queues.data.storage =
    # NOTE(flaper87): sqlite points to sqla for backwards compatibility
    sqlite = zaqar.queues.storage.sqlalchemy.driver:DataDriver
    sqlalchemy = zaqar.queues.storage.sqlalchemy.driver:DataDriver
    mongodb = zaqar.queues.storage.mongodb.driver:DataDriver
    faulty = zaqar.tests.faulty_storage:DataDriver

zaqar.queues.control.storage =
    sqlite = zaqar.queues.storage.sqlalchemy.driver:ControlDriver
    sqlalchemy = zaqar.queues.storage.sqlalchemy.driver:ControlDriver
    mongodb = zaqar.queues.storage.mongodb.driver:ControlDriver
    faulty = zaqar.tests.faulty_storage:ControlDriver

zaqar.queues.transport =
    wsgi = zaqar.queues.transport.wsgi.driver:Driver

zaqar.openstack.common.cache.backends =
    memory = zaqar.openstack.common.cache._backends.memory:MemoryBackend

oslo.config.opts =
    zaqar.queues.bootstrap = zaqar.queues.bootstrap:_config_options
    zaqar.queues.storage.pipeline = zaqar.queues.storage.pipeline:_config_options
    zaqar.queues.storage.pooling = zaqar.queues.storage.pooling:_config_options
    zaqar.queues.storage.mongodb = zaqar.queues.storage.mongodb.options:_config_options
    zaqar.queues.storage.sqlalchemy = zaqar.queues.storage.sqlalchemy.options:_config_options
    zaqar.queues.transport.wsgi = zaqar.queues.transport.wsgi.driver:_config_options
    zaqar.queues.transport.base = zaqar.queues.transport.base:_config_options
    zaqar.queues.transport.validation = zaqar.queues.transport.validation:_config_options

[nosetests]
where=tests
verbosity=2

with-doctest = true

cover-package = zaqar
cover-html = true
cover-erase = true
cover-inclusive = true

; Disabled: Causes a bug in testtools to manifest.
; Trigger: self.assertX(condition), where condition == False.
;
; In "testtools/testresult/real.py" the traceback is set to
; None in _details_to_exc_info(), but the inspect_traceback()
; method in nose/inspector.py requires a traceback-like object.
;
; detailed-errors = 1


[pbr]
warnerrors = True

[compile_catalog]
directory = zaqar/locale
domain = zaqar

[update_catalog]
domain = zaqar
output_dir = zaqar/locale
input_file = zaqar/locale/zaqar.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = zaqar/locale/zaqar.pot
