[metadata]
name = zaqar
summary = OpenStack Queuing and Notification Service
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://docs.openstack.org/developer/zaqar/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages =
    zaqar

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[entry_points]
console_scripts =
    zaqar-bench = zaqar.bench.conductor:main
    zaqar-server = zaqar.cmd.server:run
    zaqar-gc = zaqar.cmd.gc:run

zaqar.data.storage =
    mongodb = zaqar.storage.mongodb.driver:DataDriver
    mongodb.fifo = zaqar.storage.mongodb.driver:FIFODataDriver
    redis = zaqar.storage.redis.driver:DataDriver
    faulty = zaqar.tests.faulty_storage:DataDriver

zaqar.control.storage =
    sqlalchemy = zaqar.storage.sqlalchemy.driver:ControlDriver
    mongodb = zaqar.storage.mongodb.driver:ControlDriver
    redis = zaqar.storage.redis.driver:ControlDriver
    faulty = zaqar.tests.faulty_storage:ControlDriver

zaqar.transport =
    wsgi = zaqar.transport.wsgi.driver:Driver
    websocket = zaqar.transport.websocket.driver:Driver

oslo.config.opts =
    zaqar.common.auth = zaqar.common.auth:_config_options
    zaqar.common.configs = zaqar.common.configs:_config_options
    zaqar.storage.pipeline = zaqar.storage.pipeline:_config_options
    zaqar.storage.pooling = zaqar.storage.pooling:_config_options
    zaqar.storage.mongodb = zaqar.storage.mongodb.options:_config_options
    zaqar.storage.redis = zaqar.storage.redis.options:_config_options
    zaqar.storage.sqlalchemy = zaqar.storage.sqlalchemy.options:_config_options
    zaqar.transport.wsgi = zaqar.transport.wsgi.driver:_config_options
    zaqar.transport.websocket = zaqar.transport.websocket.driver:_config_options
    zaqar.transport.base = zaqar.transport.base:_config_options
    zaqar.transport.validation = zaqar.transport.validation:_config_options

zaqar.storage.stages =
    zaqar.notification.notifier = zaqar.notification.notifier:NotifierDriver

zaqar.storage.mongodb.driver.queue.stages =
    message_queue_handler = zaqar.storage.mongodb.messages:MessageQueueHandler

zaqar.storage.redis.driver.queue.stages =
    message_queue_handler = zaqar.storage.redis.messages:MessageQueueHandler

zaqar.notification.tasks =
    http = zaqar.notification.tasks.webhook:WebhookTask
    https = zaqar.notification.tasks.webhook:WebhookTask
    mailto = zaqar.notification.tasks.mailto:MailtoTask
    trust+http = zaqar.notification.tasks.trust:TrustTask
    trust+https = zaqar.notification.tasks.trust:TrustTask

tempest.test_plugins =
    zaqar_tests = zaqar.tests.tempest_plugin.plugin:ZaqarTempestPlugin

[nosetests]
where=zaqar/tests
verbosity=2

with-doctest = true

cover-package = zaqar
cover-html = true
cover-erase = true
cover-inclusive = true

; Disabled: Causes a bug in testtools to manifest.
; Trigger: self.assertX(condition), where condition == False.
;
; In "testtools/testresult/real.py" the traceback is set to
; None in _details_to_exc_info(), but the inspect_traceback()
; method in nose/inspector.py requires a traceback-like object.
;
; detailed-errors = 1


# NOTE(flaper87): Disable until the next pbr release to avoid breaking the gate
# by unexpected errors. More info at:
# http://lists.openstack.org/pipermail/openstack-dev/2016-June/097849.html
# [pbr]
# warnerrors = true

[compile_catalog]
directory = zaqar/locale
domain = zaqar

[update_catalog]
domain = zaqar
output_dir = zaqar/locale
input_file = zaqar/locale/zaqar.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = zaqar/locale/zaqar.pot
