[metadata]
name = zaqar
summary = OpenStack Queuing and Notification Service
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/zaqar/latest/
python_requires = >=3.10
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

project_urls =
    Source=https://opendev.org/openstack/zaqar
    Tracker=https://bugs.launchpad.net/zaqar

[files]
packages =
    zaqar

[entry_points]
console_scripts =
    zaqar-bench = zaqar.bench.conductor:main
    zaqar-server = zaqar.cmd.server:run
    zaqar-gc = zaqar.cmd.gc:run
    zaqar-sql-db-manage = zaqar.storage.sqlalchemy.migration.cli:main
    zaqar-status = zaqar.cmd.status:main

zaqar.data.storage =
    mongodb = zaqar.storage.mongodb.driver:DataDriver
    mongodb.fifo = zaqar.storage.mongodb.driver:FIFODataDriver
    redis = zaqar.storage.redis.driver:DataDriver
    swift = zaqar.storage.swift.driver:DataDriver
    faulty = zaqar.tests.faulty_storage:DataDriver

zaqar.control.storage =
    sqlalchemy = zaqar.storage.sqlalchemy.driver:ControlDriver
    mongodb = zaqar.storage.mongodb.driver:ControlDriver
    redis = zaqar.storage.redis.driver:ControlDriver
    faulty = zaqar.tests.faulty_storage:ControlDriver

zaqar.transport =
    wsgi = zaqar.transport.wsgi.driver:Driver
    websocket = zaqar.transport.websocket.driver:Driver

oslo.config.opts =
    zaqar = zaqar.conf.opts:list_opts

zaqar.storage.stages =
    zaqar.notification.notifier = zaqar.notification.notifier:NotifierDriver

zaqar.storage.mongodb.driver.queue.stages =
    message_queue_handler = zaqar.storage.mongodb.messages:MessageQueueHandler

zaqar.storage.redis.driver.queue.stages =
    message_queue_handler = zaqar.storage.redis.messages:MessageQueueHandler

zaqar.storage.swift.driver.queue.stages =
    message_queue_handler = zaqar.storage.swift.messages:MessageQueueHandler

zaqar.storage.mongodb.driver.topic.stages =
    message_queue_handler = zaqar.storage.mongodb.topic_messages:MessageTopicHandler

zaqar.storage.redis.driver.topic.stages =
    message_queue_handler = zaqar.storage.redis.messages:MessageTopicHandler

zaqar.storage.swift.driver.topic.stages =
    message_queue_handler = zaqar.storage.swift.messages:MessageTopicHandler

zaqar.notification.tasks =
    http = zaqar.notification.tasks.webhook:WebhookTask
    https = zaqar.notification.tasks.webhook:WebhookTask
    mailto = zaqar.notification.tasks.mailto:MailtoTask
    trust+http = zaqar.notification.tasks.trust:TrustTask
    trust+https = zaqar.notification.tasks.trust:TrustTask

zaqar.extraspec.tasks =
    messagecode = zaqar.extraspec.tasks.messagecode:MessageCodeAuthentication

oslo.policy.policies =
    zaqar = zaqar.common.policies:list_rules

[extras]
mongodb =
    pymongo>=3.6.0 # Apache-2.0
redis =
    redis>=3.4.0 # MIT
mysql =
    PyMySQL>=0.8.0 # MIT License
